misc: Remove unsupported jvm opts
MaxPermSize support was removed in Java 8